examples_k8s/vernemq.yaml
## __     __                   __  __  ___
## \ \   / /__ _ __ _ __   ___|  \/  |/ _ \
##  \ \ / / _ \ '__| '_ \ / _ \ |\/| | | | |
##   \ V /  __/ |  | | | |  __/ |  | | |_| |
##    \_/ \___|_|  |_| |_|\___|_|  |_|\__\_\
## 

## VerneMQ - MQTT Broker
## https://vernemq.com/ + https://github.com/vernemq/vernemq
## https://hub.docker.com/r/vernemq/vernemq + https://github.com/vernemq/docker-vernemq

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vernemq
  namespace: default
  labels:
    app: vernemq
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vernemq
  template:
    metadata:
      labels:
        app: vernemq
    spec:
      #imagePullSecrets:
      #- name: regcred
      #hostname: vernemq
      securityContext:
        fsGroup: 10000
        runAsGroup: 10000
        runAsUser: 10000
      restartPolicy: Always
      containers:
      - name: vernemq
        image: vernemq/vernemq:2.0.1-alpine # only work with workarround (see below)
        imagePullPolicy: IfNotPresent
        #env: 
        #- name: DOCKER_VERNEMQ_NODENAME
        #  valueFrom:
        #    fieldRef:
        #      apiVersion: v1
        #      fieldPath: metadata.name
        args: ["/bin/sh", "-c", "cp /usr/sbin/start_vernemq /vernemq/start_vernemq ; sed -i 's|/var/run/secrets/kubernetes.io/serviceaccount|/var/run/secrets/kubernetes.io/serviceaccount_disabled|g' /vernemq/start_vernemq ; /vernemq/start_vernemq"]
        ports:
        - containerPort: 1883
          name: mqtt
          protocol: TCP
        - containerPort: 8883
          name: mqtts
          protocol: TCP
        #- containerPort: 8888
        #  name: http
        #  protocol: TCP
        - containerPort: 9000 # default: 8888
          name: http
          protocol: TCP
        - containerPort: 8889
          name: https
          protocol: TCP
        #- containerPort: 44053
        #  name: vmq-cluster
        #  protocol: TCP
        #- containerPort: 18884
        #  name: vmqs-cluster
        #  protocol: TCP
        - containerPort: 8080
          name: mqtt-ws
          protocol: TCP
        - containerPort: 9002
          name: mqtt-wss
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 9000 # default: 8888
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 120
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 9000 # default: 8888
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 60
          successThreshold: 1
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        volumeMounts:
        - name: vernemq-data
          mountPath: /vernemq/data
        - name: vmq-passwd
          subPath: vmq.passwd
          mountPath: /vernemq/etc/vmq.passwd
          #readOnly: true
        - name: vmq-acl
          subPath: vmq.acl
          mountPath: /vernemq/etc/vmq.acl
          readOnly: true
        - name: vernemq-ssl
          subPath: cacerts.pem
          mountPath: /vernemq/etc/cacerts.pem
          readOnly: true
        - name: vernemq-ssl
          subPath: cert.pem
          mountPath: /vernemq/etc/cert.pem
          readOnly: true
        - name: vernemq-ssl
          subPath: key.pem
          mountPath: /vernemq/etc/key.pem
          readOnly: true
      volumes:
      - name: vernemq-data
        persistentVolumeClaim:
          claimName: vernemq-data
      - name: vmq-passwd
        configMap:
          name: vernemq-files-passwd-config
          defaultMode: 420 # decimal equivalent of octal 0644
      - name: vmq-acl
        configMap:
          name: vernemq-files-acl-config
          defaultMode: 420 # decimal equivalent of octal 0644
      - name: vernemq-ssl
        secret:
          secretName: vernemq-ssl-secret
          defaultMode: 420 # decimal equivalent of octal 0644

---

apiVersion: v1
kind: Service
metadata:
  name: vernemq
  namespace: default
  labels:
    app: vernemq
    exporter: vernemq
spec:
  type: ClusterIP
  ports:
    - name: "mqtt"
      protocol: TCP
      port: 1883
      targetPort: 1883
    - name: "mqtts"
      protocol: TCP
      port: 8883
      targetPort: 8883
    - name: "http"
      protocol: TCP
      port: 9000
      targetPort: 9000 # default: 8888
    - name: "https"
      protocol: TCP
      port: 8889
      targetPort: 8889
    - name: "mqtt-ws"
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: "mqtt-wss"
      protocol: TCP
      port: 9002
      targetPort: 9002
  selector:
    app: vernemq

#--- 
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: vernemq-external
#  namespace: default
#  labels:
#    app: vernemq
#spec:
#  type: NodePort
#  ports:
#    - name: "mqtt"
#      protocol: TCP
#      port: 1883
#      targetPort: 1883
#      #nodePort: 31883
#    - name: "mqtts"
#      protocol: TCP
#      port: 8883
#      targetPort: 8883
#      #nodePort: 38883
#  selector:
#    app: vernemq

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vernemq-status
  namespace: default
  labels:
    app: vernemq
  annotations:
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/x-forwarded-prefix: "/"
    #nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    ## https://cert-manager.io/docs/
    #cert-manager.io/cluster-issuer: ingress-tls-secret
    #cert-manager.io/acme-challenge-type: http01
    ## https://kubernetes.github.io/ingress-nginx/examples/auth/oauth-external-auth/
    #nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    ## https://kubernetes.github.io/ingress-nginx/examples/auth/basic/
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - VerneMQ'
    traefik.ingress.kubernetes.io/router.middlewares: 'default-basic-auth@kubernetescrd,default-https-redirectscheme@kubernetescrd'
spec:
  #ingressClassName: nginx # nginx or traefik
  tls:
  - hosts:
    - vernemq.example.com
    secretName: ingress-tls-secret
  rules:
  - host: vernemq.example.com
    http:
      paths:
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: vernemq
            port:
              #name: http
              number: 9000     # default: 8888

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vernemq-websocket
  namespace: default
  labels:
    app: vernemq
  annotations:
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/x-forwarded-prefix: "/"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    ## https://cert-manager.io/docs/
    #cert-manager.io/cluster-issuer: ingress-tls-secret
    #cert-manager.io/acme-challenge-type: http01
spec:
  #ingressClassName: nginx
  tls:
  - hosts:
    - vernemq.example.com
    secretName: ingress-tls-secret
  rules:
  - host: vernemq.example.com
    http:
      paths:
      - path: /mqtt            # wss://vernemq.example.com/mqtt , test with https://mqttboard.flespi.io/
        pathType: Exact
        backend:
          service:
            name: vernemq
            port:
              #name: mqtt-ws
              number: 8080

---

apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mqtt-tcp
  namespace: default
  labels:
    app: vernemq
spec:
  entryPoints:
    - mqtt
  routes:
  - match: HostSNI(`*`)
    services:
      - name: vernemq
        port: 1883

---

apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mqtts-tcp
  namespace: default
  labels:
    app: vernemq
spec:
  entryPoints:
    - mqtts
  routes:
  - match: HostSNI(`*`) # HostSNI(`*`) or HostSNI(`vernemq.example.com`)"
    services:
      - name: vernemq
        port: 8883
  tls:
    passthrough: true
