examples_k8s/website_nginx+openssh.yaml
##  _   _  ____ ___ _   ___  __           ___                   ____ ____  _   _
## | \ | |/ ___|_ _| \ | \ \/ /    _     / _ \ _ __   ___ _ __ / ___/ ___|| | | |
## |  \| | |  _ | ||  \| |\  /   _| |_  | | | | '_ \ / _ \ '_ \\___ \___ \| |_| |
## | |\  | |_| || || |\  |/  \  |_   _| | |_| | |_) |  __/ | | |___) |__) |  _  |
## |_| \_|\____|___|_| \_/_/\_\   |_|    \___/| .__/ \___|_| |_|____/____/|_| |_|
##                                            |_|

## NGINX - web server, proxy server, load balancer and more
## https://nginx.org/ + https://github.com/nginx/nginx
## https://hub.docker.com/_/nginx + https://github.com/nginxinc/docker-nginx
## Alternative: https://hub.docker.com/r/nginxinc/nginx-unprivileged & https://github.com/nginxinc/docker-nginx-unprivileged (replace port 80 with 8080)
## Exporter: https://github.com/nginxinc/nginx-prometheus-exporter

## OpenSSH - connectivity tool for remote login with the SSH protocol
## https://www.openssh.com/
## https://github.com/linuxserver/docker-openssh-server + https://hub.docker.com/r/linuxserver/openssh-server

## ======= WARNING =======
## This setup with OpenSSh is not recommended in a productive environment! (Before delete OpenSSH Container and Settings.)
## If you want to copy files (website data) into a running NGINX container volume, it is recommended to use the "kubectl cp" command.
## ======= WARNING =======

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: default
  labels:
    app: website
  #annotations: {}
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
      #annotations: {}
    spec:
      #imagePullSecrets:
      #- name: regcred
      #hostname: website
      restartPolicy: Always
      securityContext:
        fsGroup: 101    # nginx user (see comment for PUID)
      containers:
      - name: nginx
        image: nginx:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        volumeMounts:
        - name: website-nginx-data
          mountPath: /usr/share/nginx/html
        - name: website-nginx-defaultconf-file-config
          subPath: default.conf
          mountPath: /etc/nginx/conf.d/default.conf
          #readOnly: true
        #- name: website-nginx-index-file-config
        #  subPath: index.html
        #  mountPath: /usr/share/nginx/html/index.html
        #  #readOnly: true
        readinessProbe:
          httpGet:
            path: /nginx_status
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 120
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /nginx_status
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 120
          timeoutSeconds: 5
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9113
          name: exporter
          protocol: TCP
        args:
        - '-nginx.scrape-uri=http://localhost:80/nginx_status'  # need stub_status page
        #- '-nginx.ssl-verify=false'
        #- '-web.listen-address=:9113'
        #- '-web.telemetry-path=/metrics'
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "256Mi"
            cpu: "0.5"
      - name: openssh
        #image: ghcr.io/linuxserver/openssh-server:latest
        image: linuxserver/openssh-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 2222
          name: ssh
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "512Mi"
            cpu: "0.5"
        volumeMounts:
        - name: website-nginx-data
          mountPath: /usr/share/nginx/html
        - name: website-openssh-data
          mountPath: /config
        - name: website-openssh-file-bashprofile
          subPath: .bash_profile
          mountPath: /config/.bash_profile
          readOnly: true
        - name: website-openssh-file-portforwarding
          subPath: 10-sshd_portforwarding.sh
          mountPath: /config/custom-cont-init.d/10-sshd_portforwarding.sh
          readOnly: true
      volumes:
      ## data volumes:
      - name: website-nginx-data
        persistentVolumeClaim:
          claimName: website-nginx-data
      - name: website-openssh-data
        persistentVolumeClaim:
          claimName: website-openssh-data
      ## config files:
      #- name: website-nginx-index-file-config
      #  configMap:
      #    name: website-nginx-index-file-config
      #    optional: true
      - name: website-nginx-defaultconf-file-config
        configMap:
          name: website-nginx-defaultconf-file-config
          #optional: true
      - name: website-openssh-file-bashprofile
        configMap:
          name: website-openssh-file-bashprofile
      - name: website-openssh-file-portforwarding
        configMap:
          name: website-openssh-file-portforwarding
          defaultMode: 0777
          optional: true

#---
#
### optional: index.html in /usr/share/nginx/html for website (nginx)
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: website-nginx-index-file-config
#  namespace: default
#  labels:
#    app: website
#data:
#  index.html: |-
#    <html>
#      <head>
#        <title>NGINX Website by K8s</title>
#      </head>
#      <body>
#        <p>Hello :-)</p>
#      </body>
#    </html>

---

apiVersion: v1
kind: Service
metadata:
  name: website-nginx
  namespace: default
  labels:
    app: website
    exporter: nginx
spec:
  type: ClusterIP    # default: "ClusterIP" , set to "NodePort" for access over external-ip (not recommended)
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: exporter
    protocol: TCP
    port: 9113
    targetPort: 9113
  selector:
    app: website

---

apiVersion: v1
kind: Service
metadata:
  name: website-openssh
  namespace: default
  labels:
    app: website
    #exporter: openssh
spec:
  type: NodePort    # "NodePort" for access over external-ip
  ports:
  - name: openssh
    protocol: TCP
    port: 2222
    targetPort: 2222
    #nodePort: 32222
  selector:
    app: website

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-website
  namespace: default
  labels:
    app: website
  annotations:
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    ## https://cert-manager.io/docs/
    #cert-manager.io/cluster-issuer: ingress-tls-secret
    #cert-manager.io/acme-challenge-type: http01
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - website.example.com
    secretName: ingress-tls-secret
  rules:
  - host: website.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: website-nginx
            port:
              #name: http
              number: 80
